bagging with NN

--- a/Post_processing.ipynb
+++ b/Post_processing.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -19,7 +21,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Helper functions\n",
@@ -68,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Extract 6-dimensional features consisting of average RGB color as well as variance\n",
@@ -96,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Compute features for each image patch\n",
@@ -113,7 +121,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Convert array of labels to an image\n",
@@ -144,7 +154,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def create_model(img,gt,n_cluster,patch_size):\n",
@@ -177,7 +189,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def assign_label(patch,models):\n",
@@ -195,7 +209,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def calcul_F1(Y, label):    \n",
@@ -230,7 +246,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def calculate_accuracy(img,gt,models):\n",
@@ -251,7 +269,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def rotation(orig, gts):\n",
@@ -266,7 +286,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -299,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "imgs,gt_imgs=rotation(imgs,gt_imgs)"
@@ -308,7 +332,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# CALCULATE THE MODELS\n",
@@ -322,7 +348,9 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TEST 1 IMAGE\n",
@@ -335,7 +363,9 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -355,7 +385,9 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -373,7 +405,9 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -413,7 +447,9 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Post processing"
@@ -422,7 +458,9 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def complete_lines(label):\n",
@@ -456,7 +494,9 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -498,7 +538,9 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def remove_isolated_connected_component(label):\n",
@@ -528,7 +570,9 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -570,7 +614,9 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gt_patches = img_crop(gt_test, patch_size, patch_size)\n",
@@ -581,7 +627,9 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -598,7 +646,9 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def complete_lines_almostfull(label):\n",
@@ -668,7 +718,9 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -710,7 +762,9 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def bootstrap(imgs,size,number):\n",
@@ -730,7 +784,9 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#bootstrap imgs\n",
@@ -740,7 +796,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## PER LA PROSSIMA VOLTA:\n",
@@ -765,7 +823,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
