--- a/Logistic.ipynb
+++ b/Logistic.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -18,15 +16,13 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn import linear_model\n",
     "from sklearn import svm\n",
-    "import cv2"
+    "#import cv2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Helper functions\n",
@@ -80,10 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def rotation(orig, gts):\n",
@@ -132,10 +126,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def extract_features(img):\n",
@@ -157,11 +149,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "def calcul_F1(Y, label):    \n",
+    "    TN = 0\n",
+    "    FP = 0\n",
+    "    FN = 0\n",
+    "    TP = 0\n",
+    "    matrix = []\n",
+    "    \n",
+    "\n",
+    "    for i in range(len(Y)):\n",
+    "        if (Y[i]==0) & (label[i]==0):\n",
+    "            TN = TN + 1\n",
+    "        elif (Y[i]==1) & (label[i]==0):\n",
+    "            FN = FN + 1   \n",
+    "        elif (Y[i]==1) & (label[i]==1):\n",
+    "            TP = TP + 1  \n",
+    "        else:\n",
+    "            FP = FP + 1\n",
+    "    \n",
+    "    F1_score = 0\n",
+    "    if (TP+FP > 0) and (TP+FN > 0):\n",
+    "        precision = TP/(TP+FP)\n",
+    "        recall = TP/(TP+FN)\n",
+    "        F1_score = 2*precision*recall / (precision+recall)\n",
+    "    else:\n",
+    "        print('Something goes wrong...')\n",
+    "    \n",
+    "    return F1_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n",
+      "300\n"
+     ]
+    }
+   ],
    "source": [
     "# Obtain train set\n",
     "# Loaded a set of images\n",
@@ -191,39 +225,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1_score = 0.4821605617351859\n"
+     ]
+    }
+   ],
    "source": [
     "logreg = linear_model.LogisticRegression(C=1e5, class_weight=\"balanced\")\n",
     "logreg.fit(X, Y)\n",
     "Z=logreg.predict(X)\n",
-    "print('F1_score = ' + str(f1_score(Y, Z)))"
+    "print('F1_score = ' + str(calcul_F1(Y, Z)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1_score = 0.061306750034408865\n"
+     ]
+    }
+   ],
    "source": [
     "clf = svm.SVC(gamma='auto')\n",
     "clf.fit(X,Y)\n",
     "Z=clf.predict(X)\n",
-    "print('F1_score = ' + str(f1_score(Y, Z)))"
+    "print('F1_score = ' + str(calcul_F1(Y, Z)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 15000 is out of bounds for axis 0 with size 15000",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-e1895615eafc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[0mZ_te\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlogreg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_te\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'F1_score = '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcalcul_F1\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mZ_te\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[0mZ_te\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_te\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-5-f6eab5961413>\u001b[0m in \u001b[0;36mcalcul_F1\u001b[1;34m(Y, label)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m             \u001b[0mTN\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTN\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 15000 is out of bounds for axis 0 with size 15000"
+     ]
+    }
+   ],
    "source": [
     "# Obtain test set\n",
     "root = \"training/\"\n",
@@ -245,10 +302,10 @@
     "Y_te = np.asarray([value_to_class(np.mean(gt_patches_te[i])) for i in range(len(gt_patches_te))])\n",
     "\n",
     "Z_te = logreg.predict(X_te)\n",
-    "print('F1_score = ' + str(f1_score(Y, Z_te)))\n",
+    "print('F1_score = ' + str(calcul_F1(Y, Z_te)))\n",
     "\n",
     "Z_te = clf.predict(X_te)\n",
-    "print('F1_score = ' + str(f1_score(Y, Z_te)))"
+    "print('F1_score = ' + str(calcul_F1(Y, Z_te)))"
    ]
   }
  ],
@@ -268,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
