--- a/ML_notebook_Diego_Valerio.ipynb
+++ b/ML_notebook_Diego_Valerio.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 395,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -19,7 +21,9 @@
   {
    "cell_type": "code",
    "execution_count": 396,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import torch.nn.functional as F\n",
@@ -39,7 +43,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -74,7 +80,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -93,7 +101,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def bootstrap_images(imgs, gt_imgs,size,number):\n",
@@ -118,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#? np.ndarray"
@@ -127,7 +139,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def train_SimpleNet(dataset, label, w, h, lr, max_epochs, mini_batch_size, dropout):\n",
@@ -159,7 +173,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def bagging_NN(dataset, label, percentage_train_data, nb_model, w, h, lr, max_epochs, mini_batch_size, dropout):\n",
@@ -206,6 +222,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -466,7 +483,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -483,7 +502,9 @@
   {
    "cell_type": "code",
    "execution_count": 316,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -534,7 +555,9 @@
   {
    "cell_type": "code",
    "execution_count": 317,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Post processing"
@@ -543,7 +566,9 @@
   {
    "cell_type": "code",
    "execution_count": 318,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def complete_lines(label,threshold):\n",
@@ -577,7 +602,9 @@
   {
    "cell_type": "code",
    "execution_count": 319,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -613,7 +640,9 @@
   {
    "cell_type": "code",
    "execution_count": 320,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def remove_isolated_connected_component(label,size_min):\n",
@@ -643,7 +672,9 @@
   {
    "cell_type": "code",
    "execution_count": 321,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -679,7 +710,9 @@
   {
    "cell_type": "code",
    "execution_count": 322,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def complete_lines_almostfull(label):\n",
@@ -749,7 +782,9 @@
   {
    "cell_type": "code",
    "execution_count": 323,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#new_label3 = complete_lines_almostfull(new_label2)\n",
@@ -764,7 +799,9 @@
   {
    "cell_type": "code",
    "execution_count": 324,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def clean_garbage_vert(label,max_distance):\n",
@@ -816,7 +853,9 @@
   {
    "cell_type": "code",
    "execution_count": 325,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -852,7 +891,9 @@
   {
    "cell_type": "code",
    "execution_count": 326,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def clean_garbage_hor(label,max_distance):\n",
@@ -904,7 +945,9 @@
   {
    "cell_type": "code",
    "execution_count": 348,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -940,7 +983,9 @@
   {
    "cell_type": "code",
    "execution_count": 328,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create mask\n",
@@ -951,7 +996,9 @@
   {
    "cell_type": "code",
    "execution_count": 329,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -975,7 +1022,9 @@
   {
    "cell_type": "code",
    "execution_count": 349,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def post_processing(label,threshold,size_min,verbarg,horbarg):\n",
@@ -990,10 +1039,12 @@
   {
    "cell_type": "code",
    "execution_count": 402,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def create_submission(test_data, models, w, h, name_file, normalize=True):\n",
+    "def create_submission(test_data, models, w, h, name_file, prediction_training_dir, normalize=True):\n",
     "    ''' the function takes as input the test data and the models used for prediction. \n",
     "    If a list of model is given, the prediction will be done with majority vote. \n",
     "    \n",
@@ -1006,6 +1057,7 @@
     "    w, h: width and high of the patches'''\n",
     "    \n",
     "    # from list to Tensor\n",
+    "    w_im, h_im,_ = test_data[0].shape\n",
     "    test_data = [img_crop(test_data[k], w, h) for k in range(len(test_data))]\n",
     "    \n",
     "    test_data = transform_subIMG_to_Tensor(test_data)\n",
@@ -1032,23 +1084,40 @@
     "     \n",
     "    prediction = prediction.reshape(-1,)\n",
     "    \n",
-    "    nb_patches = int(608*608/(w*h))\n",
+    "    nb_patches = int(w_im*h_im/(w*h))\n",
     "    nb_images =int(prediction.shape[0]/nb_patches)\n",
     "    list_of_mask = [prediction[i*nb_patches:(i+1)*nb_patches ] for i in range(nb_images)]\n",
     "    for k in range(len(list_of_mask)):\n",
     "        list_of_mask[k] = post_processing(list_of_mask[k],32,9,3,3)\n",
     "    # from patch to image\n",
-    "    list_of_masks=[label_to_img(608, 608, w, h, list_of_mask[k]) for k in range(nb_images)]\n",
-    "        \n",
-    "    return list_of_masks\n",
+    "    list_of_masks=[label_to_img(w_im, h_im, w, h, list_of_mask[k]) for k in range(nb_images)]\n",
+    "    list_of_string_names = []\n",
+    "    for i,gt_image in enumerate(list_of_masks):\n",
+    "        Image.fromarray(gt_image).save(prediction_training_dir + \"prediction_\" + str(i) + \".png\")\n",
+    "        list_of_string_names.append(\"prediction_\" + str(i) + \".png\")\n",
     "    # create file submission\n",
-    "    #masks_to_submission(name_file, *list_of_masks)"
+    "    masks_to_submission(name_file, *list_of_string_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Image.fromarray(pimg).save(prediction_training_dir + \"prediction_\" + str(i) + \".png\")\n",
+    "oimg = get_prediction_with_overlay(train_data_filename, i)\n",
+    "oimg.save(prediction_training_dir + \"overlay_\" + str(i) + \".png\") "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 345,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import re\n",
@@ -1095,7 +1164,9 @@
   {
    "cell_type": "code",
    "execution_count": 391,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1119,7 +1190,9 @@
   {
    "cell_type": "code",
    "execution_count": 403,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1137,7 +1210,9 @@
   {
    "cell_type": "code",
    "execution_count": 407,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1157,7 +1232,9 @@
   {
    "cell_type": "code",
    "execution_count": 414,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for k in range(len(list_of_masks)):\n",
@@ -1169,7 +1246,9 @@
   {
    "cell_type": "code",
    "execution_count": 411,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -1179,7 +1258,9 @@
   {
    "cell_type": "code",
    "execution_count": 412,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2844,14 +2925,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n=90*3\n",
@@ -2865,7 +2950,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp=concatenate_images(train_imgs[3], train_mask[3])\n",
@@ -2876,7 +2963,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "? tc.nn.Dropout"
@@ -2885,7 +2974,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(len(train_mask))"
@@ -2894,7 +2985,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(len(test_imgs),N-n)"
@@ -2903,7 +2996,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# prepare input data \n",
@@ -2920,7 +3015,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print((1*train_mask_label).sum()/len(train_mask_label))"
@@ -2929,7 +3026,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(len(train_sub_images[0]))"
@@ -2938,7 +3037,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_sub_images = transform_subIMG_to_Tensor(train_sub_images)\n",
@@ -2949,6 +3050,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -2970,7 +3072,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     " ? tc.Tensor.narrow"
@@ -2979,7 +3083,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(train_mask_label.sum()/len(train_mask_label))"
@@ -2988,7 +3094,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = SimpleNet(0)\n",
@@ -3002,7 +3110,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(tc.__version__)"
@@ -3011,7 +3121,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "? tc.mean"
@@ -3020,7 +3132,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "N1=625"
@@ -3029,7 +3143,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# print the result on a single image\n",
@@ -3045,7 +3161,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# compute F1 score\n",
@@ -3057,7 +3175,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# overlap images\n",
@@ -3071,7 +3191,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def compute_test_error(test_dataset, test_label, nb_patches, model):\n",
@@ -3101,7 +3223,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "F1=compute_test_error(test_sub_images, test_mask, 625, model)"
@@ -3110,7 +3234,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(F1)"
@@ -3119,7 +3245,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -3140,7 +3268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
