--- a/ML_notebook_Diego.ipynb
+++ b/ML_notebook_Diego.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -18,8 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import torch.nn.functional as F\n",
@@ -39,7 +43,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -74,7 +80,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -93,7 +101,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def bootstrap_images(imgs, gt_imgs,size,number):\n",
@@ -118,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "? np.ndarray"
@@ -127,7 +139,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def train_SimpleNet(dataset, label, w, h, lr, max_epochs, mini_batch_size, dropout):\n",
@@ -159,7 +173,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def bagging_NN(dataset, label, percentage_train_data, nb_model, w, h, lr, max_epochs, mini_batch_size, dropout):\n",
@@ -202,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# valerio modifica questo\n",
@@ -220,7 +238,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a=np.array([[0,0],[0,1]])\n",
@@ -231,7 +251,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -245,7 +267,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = tc.tensor([0,1])\n"
@@ -261,7 +285,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "? tc.nn.Module"
@@ -270,7 +296,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class UNet(tc.nn.Module):\n",
@@ -351,7 +379,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "? tc.sigmoid"
@@ -359,8 +389,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "? np.random.normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def add_noise(dataset,label, is_simple=True):\n",
+    "    '''Add noise to the dataset.\n",
+    "    \n",
+    "    dataset : tensor type\n",
+    "    \n",
+    "    label : tensor type'''\n",
+    "    \n",
+    "    \n",
+    "    if is_simple:\n",
+    "        \n",
+    "        mean, std = dataset.mean(), dataset.std()\n",
+    "        noise = np.random.normal(loc = mean, scale = std, size = dataset.size())\n",
+    "\n",
+    "        dataset_with_noise = dataset + tc.tensor(noise)\n",
+    "        dataset = tc.cat((dataset,dataset_with_noise),dim = 0)\n",
+    "        label = tc.cat((label, label), dim = 0)\n",
+    "    else:\n",
+    "        \n",
+    "        mean, std = 0, 0.05\n",
+    "        \n",
+    "        noise = np.random.normal(mean, std, size = label.size())\n",
+    "        \n",
+    "        label_with_noise = label + tc.tensor(noise)\n",
+    "        \n",
+    "        label = tc.cat((label,label_with_noise),dim=0)\n",
+    "        \n",
+    "        dataset = tc.cat((dataset,dataset),dim=0)\n",
+    "    \n",
+    "    return dataset, label\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def from_list_to_tensor(dataset):\n",
@@ -384,7 +470,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def train_UNet(dataset, label, lr, max_epochs, mini_batch_size, nb_test, threshold=0.5):\n",
@@ -400,10 +488,14 @@
     "    test_l = label.narrow(0,dataset.size(0)-nb_test,nb_test)\n",
     "    label = label.narrow(0,0,dataset.size(0)-nb_test)\n",
     "    \n",
+    "    ## add is_simple = False to add noise to labels\n",
+    "    dataset, label = add_noise(dataset, label)\n",
     "    model = UNet()\n",
     "    \n",
     "    optimizer=tc.optim.Adam(model.parameters(),lr)\n",
-    "    criterion= tc.nn.BCELoss()\n",
+    "    # maybe using MSE is better\n",
+    "    #criterion= tc.nn.BCELoss()\n",
+    "    criterion = tc.nn.MSELoss()\n",
     "    training_errors=[]\n",
     "    losses=[]\n",
     "    \n",
@@ -419,8 +511,8 @@
     "    #print('starting to train the net')\n",
     "    for epoch in tqdm(range(max_epochs)):\n",
     "        model.train()\n",
-    "        if tc.cuda.is_available():\n",
-    "            model.cuda()\n",
+    "        #if tc.cuda.is_available():\n",
+    "        #    model.cuda()\n",
     "        for j in range(0,dataset.size(0)-nb_test,mini_batch_size):\n",
     "            input_data = dataset.narrow(0,j,mini_batch_size)\n",
     "            label_data = label.narrow(0,j,mini_batch_size)\n",
@@ -483,7 +575,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from torch.utils.data import DataLoader\n",
@@ -493,7 +587,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "? DataLoader"
@@ -502,7 +598,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tc.cuda.empty_cache()"
@@ -511,7 +609,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -572,7 +672,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "? np.prod"
@@ -581,7 +683,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# test on a image\n",
@@ -607,28 +711,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n=90*3\n",
@@ -642,7 +754,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "temp=concatenate_images(train_imgs[3], train_mask[3])\n",
@@ -653,7 +767,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "? tc.nn.Dropout"
@@ -662,7 +778,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(len(train_mask))"
@@ -671,7 +789,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(len(test_imgs),N-n)"
@@ -680,7 +800,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# prepare input data \n",
@@ -697,7 +819,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print((1*train_mask_label).sum()/len(train_mask_label))"
@@ -706,7 +830,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(len(train_sub_images[0]))"
@@ -715,7 +841,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_sub_images = transform_subIMG_to_Tensor(train_sub_images)\n",
@@ -726,6 +854,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -747,7 +876,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     " ? tc.Tensor.narrow"
@@ -756,7 +887,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(train_mask_label.sum()/len(train_mask_label))"
@@ -765,7 +898,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = SimpleNet(0)\n",
@@ -779,7 +914,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(tc.__version__)"
@@ -788,7 +925,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "? tc.mean"
@@ -797,7 +936,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "N1=625"
@@ -806,7 +947,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# print the result on a single image\n",
@@ -822,7 +965,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# compute F1 score\n",
@@ -834,7 +979,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# overlap images\n",
@@ -848,7 +995,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def compute_test_error(test_dataset, test_label, nb_patches, model):\n",
@@ -878,7 +1027,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "F1=compute_test_error(test_sub_images, test_mask, 625, model)"
@@ -887,7 +1038,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(F1)"
@@ -896,7 +1049,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -917,7 +1072,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
