--- a/ML_notebook_Diego.ipynb
+++ b/ML_notebook_Diego.ipynb
@@ -602,11 +602,17 @@
     "    mini_batch = 10\n",
     "    \n",
     "    N,channel,w,h = test_set.size()\n",
+    "    if tc.cuda.is_available():\n",
+    "        model.cuda()\n",
     "    \n",
     "    mask = tc.Tensor(N,1,w,h)\n",
     "    for i in range(0,test_set.size(0),mini_batch):\n",
     "        temp =  test_set.narrow(0,i,mini_batch)\n",
-    "        mask[i:i+batch_size] = model(temp)\n",
+    "        if tc.cuda.is_available():\n",
+    "            tc.cuda.empty_cache()\n",
+    "            temp = temp.cuda()\n",
+    "        temp = model(temp)\n",
+    "        mask[i:i+batch_size] = temp.cpu()\n",
     "    \n",
     "    mask = (mask.detach().numpy() > 0.5)*1\n",
     "    list_of_names= []\n",
