--- a/ML_notebook_Diego.ipynb
+++ b/ML_notebook_Diego.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -21,9 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -72,9 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -92,10 +92,13 @@
     "        self.rot = rot\n",
     "        if bound!=None:\n",
     "            del self.files[0:bound[0]]\n",
-    "            del self.files[bound[1]:]\n",
+    "            del self.files[-bound[1]:]\n",
     "    \n",
     "    def __len__(self):\n",
-    "        return len(self.files)*(1+3*self.rot)*(1+1*noise)*(1+1*do_flip)\n",
+    "        return len(self.files)\n",
+    "    \n",
+    "    def true_len(self):\n",
+    "        return len(self.files)*(1+3*self.rot)*(1+1*self.noise)*(1+1*self.do_flip)\n",
     "    \n",
     "    def __getitem__(self, index):\n",
     "        image = load_image(self.image_dir + self.files[index])\n",
@@ -106,14 +109,14 @@
     "            segment = add_segment(image)\n",
     "            image=np.concatenate((image,laplacian_image,sobel,segment),axis = 2)\n",
     "        image,gt_image=[image],[gt_image]\n",
-    "        if rot:\n",
+    "        if self.rot:\n",
     "            image,gt_image = rotation(image,gt_image)\n",
     "        if self.do_flip:\n",
     "            image,gt_image = flip(image,gt_image)\n",
     "            \n",
     "        image,gt_image = self.from_list_to_tensor(image), self.from_list_to_tensor(gt_image)\n",
     "        \n",
-    "        if normalize:\n",
+    "        if self.normalize:\n",
     "            image = (image - image.mean())/image.std()\n",
     "        \n",
     "        if self.noise:\n",
@@ -172,6 +175,15 @@
     "            dataset = tc.cat((dataset,dataset),dim=0)\n",
     "\n",
     "        return dataset, label\n",
+    "    \n",
+    "    def get_features(self):\n",
+    "        if self.do_prep:\n",
+    "            features = 10\n",
+    "        else:\n",
+    "            features = 3\n",
+    "        return features\n",
+    "    def get_mini(self):\n",
+    "        return (1+3*self.rot)*(1+1*self.do_flip)*(1+1*self.noise)\n",
     "\n"
    ]
   },
@@ -181,6 +193,24 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "a = iter([0,1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(next(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "image = imgs[0]\n",
@@ -209,7 +239,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -227,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -322,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -386,13 +416,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def train_UNet(trainig_directory, lr, max_epochs, mini_batch_size, nb_test, threshold=0.5, \n",
+    "def train_UNet(training_directory, lr, max_epochs, mini_batch_size, nb_test, threshold=0.5, \n",
     "               do_preprocessing = False, flip_data=True, model=None):\n",
     "    ''' train the UNet using the Binary Cross Entropy loss and Adam as optimizer.\n",
     "    The dataset must be a list of 400*400 images.'''\n",
@@ -400,14 +428,15 @@
     "    dataset = DatasetUNet(training_directory, bound=(0,nb_test) ,do_flip=flip_data,\n",
     "                          do_prep= do_preprocessing,\n",
     "                          noise=True, is_simple_noise = True, rot = True, normalize = True)\n",
-    "    N = dataset.__len__()\n",
+    "    N = dataset.true_len()\n",
+    "    print(N)\n",
     "    test_set = DatasetUNet(training_directory, bound=(nb_test,N) ,do_flip=False,\n",
     "                           do_prep= False,\n",
     "                           noise=False, is_simple_noise = False, rot = False, normalize = True)\n",
     "    train_load = tc.utils.data.DataLoader(dataset,batch_size= mini_batch_size)\n",
     "    test_load = tc.utils.data.DataLoader(test_set,batch_size=nb_test)\n",
     "    if model == None:\n",
-    "        model = UNet(features= dataset.size(1))\n",
+    "        model = UNet(features= dataset.get_features())\n",
     "    \n",
     "    optimizer=tc.optim.Adam(model.parameters(),lr)\n",
     "    # maybe using MSE is better\n",
@@ -430,6 +459,8 @@
     "        #if tc.cuda.is_available():\n",
     "        #    model.cuda()\n",
     "        for input_data, label_data in train_load:\n",
+    "            input_data = input_data.view(dataset.get_mini()*mini_batch_size,dataset.get_features(),400,400)\n",
+    "            label_data = label_data.view(dataset.get_mini()*mini_batch_size,1,400,400)\n",
     "            if tc.cuda.is_available():\n",
     "                input_data, label_data = input_data.cuda(), label_data.cuda()\n",
     "            output = model(input_data)\n",
@@ -445,44 +476,34 @@
     "        model.eval()\n",
     "        losses.append(loss)\n",
     "        for test,mask in test_load:\n",
+    "            test = test.view(test_set.get_mini()*nb_test,test_set.get_features(),400,400)\n",
+    "            mask = mask.view(test_set.get_mini()*nb_test,1,400,400)\n",
     "            prediction = model(test)\n",
     "            prediction = prediction.cpu()\n",
     "            prediction = prediction.detach_().numpy()[:,0,:,:]\n",
     "            prediction = (prediction > threshold)*1\n",
     "            #print(prediction[0])\n",
-    "            mask = test_l.numpy()[:,0,:,:]\n",
+    "            mask = mask.numpy()[:,0,:,:]\n",
     "            F1_error = 0\n",
     "            #print(mask.shape)\n",
     "            training_error = (((mask>0.5)*1 == prediction)*1).sum()/np.prod(prediction.shape)\n",
     "\n",
     "            training_errors.append(training_error)\n",
-    "            break\n",
     "        \n",
-    "        \n",
-    "        # improve the calcul_F1 fonction to optimize the code\n",
-    "        '''\n",
-    "        for i in range(dataset.size(0)):\n",
-    "            F1_error += calcul_F1(mask[i], prediction[i])\n",
-    "        F1_error = F1_error/dataset.size(0)\n",
-    "        training_F1_error.append(F1_error)\n",
-    "        if F1_error >0.95:\n",
-    "            break\n",
-    "        \n",
-    "    # plot the results\n",
-    "    \n",
-    "    plt.figure()\n",
-    "    plt.plot(np.arange(epoch + 1)+1,training_F1_error)\n",
-    "    plt.xlabel('epoch')\n",
-    "    plt.ylabel('F1_error')\n",
-    "    '''\n",
+    "    model.cpu()\n",
+    "    tc.save(model,'Model_UNet/model_CPU.pt')\n",
+    "   \n",
     "    plt.figure()\n",
     "    plt.plot(np.arange(epoch + 1)+1,losses)\n",
     "    plt.xlabel('epoch')\n",
     "    plt.ylabel('loss')\n",
-    "    plt.figure()\n",
-    "    plt.plot(np.arange(epoch + 1)+1,training_errors)\n",
-    "    plt.xlabel('epoch')\n",
-    "    plt.ylabel('accuracy')\n",
+    "    try:\n",
+    "        plt.figure()\n",
+    "        plt.plot(np.arange(epoch + 1)+1,training_errors)\n",
+    "        plt.xlabel('epoch')\n",
+    "        plt.ylabel('accuracy')\n",
+    "    except:\n",
+    "        print(training_errors)\n",
     "    return model\n",
     "        \n",
     "    "
@@ -535,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -547,24 +568,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "let's start to train the Net\n",
+      "1440\n",
+      "cuda is available\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
    "source": [
-    "N = len(imgs)\n",
-    "n = N\n",
-    "train_imgs=imgs[0:n]\n",
-    "train_mask=gt_imgs[0:n]\n",
     "#test_imgs=imgs[n:N]\n",
     "#test_mask = gt_imgs[n:N]\n",
     "lr = 1e-4\n",
     "max_epochs = 50\n",
-    "mini_batch_size=10\n",
+    "mini_batch_size=1\n",
     "nb_test = 10\n",
     "print('let\\'s start to train the Net')\n",
     "\n",
-    "model = train_UNet(train_imgs, train_mask, lr, max_epochs, mini_batch_size,nb_test, do_preprocessing=True, model=model)\n"
+    "model = train_UNet('training/', lr, max_epochs, mini_batch_size,nb_test, do_preprocessing=True)\n"
    ]
   },
   {
@@ -1068,7 +1101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
